eks/fastify-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify
  namespace: qa-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastify
  template:
    metadata:
      labels:
        app: fastify
    spec:
      containers:
      - name: fastify
        image: fastify/fastify:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fastify-service
  namespace: qa-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: fastify
