eks/strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: qa-cms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: strapi/strapi:latest
        ports:
        - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: qa-cms
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 1337
  selector:
    app: strapi
