eks/common-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-ingress
  namespace: qa-cms  # Change this to a common namespace if needed
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:518955882229:certificate/4012ad83-e371-4aea-b5a4-9465351f32d1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: qa-cms.indianbluebook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi-service
                port:
                  number: 80
    - host: qa-api.indianbluebook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastify-service
                port:
                  number: 80
